# Strata

./: CMakeLists.txt  Readme.md
lib/discord_social_sdk/include/: discordpp.h
src/: Game.cpp  Game.hpp  PerlinNoise.hpp  TileRegistry.hpp  World.cpp  World.hpp  discord.cpp  discord.hpp  light.frag  main.cpp
